Fix tasks overflow-y only

--- a/src/pages/tasksList/tasksList.css
+++ b/src/pages/tasksList/tasksList.css
@@ -27,7 +27,7 @@
 
 .wrapper-main__tasks {
   grid-area: 3 / 2 / 4 / 4;
-  overflow: scroll;
+  overflow-y: scroll;
   height: 100%;
   width: 100%;
 }
